get more section
sudah sampai get more section

--- a/index.html
+++ b/index.html
@@ -163,6 +163,206 @@
         </div>
       </section>
       <!-- Favorites Section End -->
+
+      <!-- Create and sell section start -->
+      <section class="create section">
+        <div class="create__container container">
+          <h2 class="section__title">Create and sell your NFT</h2>
+          <div class="create__items">
+            <div class="create__item">
+              <i class="create__item-icon bx bxs-book"></i>
+              <h3 class="create__item-title">Create collection</h3>
+              <p class="create__item-desc">
+                Collect NFT around the world. Make your collection keep antique
+              </p>
+            </div>
+
+            <div class="create__item">
+              <i class="create__item-icon bx bxl-bitcoin"></i>
+              <h3 class="create__item-title">Add your NFTs</h3>
+              <p class="create__item-desc">
+                Show your NFT to the world. You’re have big potentials
+              </p>
+            </div>
+
+            <div class="create__item">
+              <i class="create__item-icon bx bxs-spreadsheet"></i>
+              <h3 class="create__item-title">List them for sale</h3>
+              <p class="create__item-desc">
+                Sell your NFT so you can earn some bucks from there
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Create and sell section end -->
+
+      <!-- Explore Section Start -->
+      <section class="explore section">
+        <div class="explore__container container">
+          <h2 class="section__title explore__title">
+            Explore the NFT Marketplace
+          </h2>
+
+          <div class="explore__category">
+            <span class="button explore__category-item active-category">
+              Newest Items</span
+            >
+            <span class="button explore__category-item">Latest Sale</span>
+            <span class="button explore__category-item">Popular</span>
+          </div>
+
+          <div class="explore__cards">
+            <div class="explore__card">
+              <img
+                class="explore__card-img"
+                src="assets/images/favorites3.png"
+              />
+              <p class="explore__card-name">Orga Tent</p>
+              <div class="explore__card-item-profile">
+                <img
+                  class="explore__card-item-profile-photo"
+                  src="assets/images/author.jpg"
+                />
+                <span class="explore__card-item-profile-author"
+                  >Dand Shawl</span
+                >
+              </div>
+              <div class="explore__card-btn-wrapper">
+                <a class="button btn-main btn-card-main">Place a bid</a>
+                <a class="button btn-secondary btn-card-secondary">Detail</a>
+              </div>
+            </div>
+
+            <div class="explore__card">
+              <img
+                class="explore__card-img"
+                src="assets/images/favorites3.png"
+              />
+              <p class="explore__card-name">Orga Tent</p>
+              <div class="explore__card-item-profile">
+                <img
+                  class="explore__card-item-profile-photo"
+                  src="assets/images/author.jpg"
+                />
+                <span class="explore__card-item-profile-author"
+                  >Dand Shawl</span
+                >
+              </div>
+              <div class="explore__card-btn-wrapper">
+                <a class="button btn-main btn-card-main">Place a bid</a>
+                <a class="button btn-secondary btn-card-secondary">Detail</a>
+              </div>
+            </div>
+
+            <div class="explore__card">
+              <img
+                class="explore__card-img"
+                src="assets/images/favorites3.png"
+              />
+              <p class="explore__card-name">Orga Tent</p>
+              <div class="explore__card-item-profile">
+                <img
+                  class="explore__card-item-profile-photo"
+                  src="assets/images/author.jpg"
+                />
+                <span class="explore__card-item-profile-author"
+                  >Dand Shawl</span
+                >
+              </div>
+              <div class="explore__card-btn-wrapper">
+                <a class="button btn-main btn-card-main">Place a bid</a>
+                <a class="button btn-secondary btn-card-secondary">Detail</a>
+              </div>
+            </div>
+
+            <div class="explore__card">
+              <img
+                class="explore__card-img"
+                src="assets/images/favorites3.png"
+              />
+              <p class="explore__card-name">Orga Tent</p>
+              <div class="explore__card-item-profile">
+                <img
+                  class="explore__card-item-profile-photo"
+                  src="assets/images/author.jpg"
+                />
+                <span class="explore__card-item-profile-author"
+                  >Dand Shawl</span
+                >
+              </div>
+              <div class="explore__card-btn-wrapper">
+                <a class="button btn-main btn-card-main">Place a bid</a>
+                <a class="button btn-secondary btn-card-secondary">Detail</a>
+              </div>
+            </div>
+
+            <div class="explore__card">
+              <img
+                class="explore__card-img"
+                src="assets/images/favorites3.png"
+              />
+              <p class="explore__card-name">Orga Tent</p>
+              <div class="explore__card-item-profile">
+                <img
+                  class="explore__card-item-profile-photo"
+                  src="assets/images/author.jpg"
+                />
+                <span class="explore__card-item-profile-author"
+                  >Dand Shawl</span
+                >
+              </div>
+              <div class="explore__card-btn-wrapper">
+                <a class="button btn-main btn-card-main">Place a bid</a>
+                <a class="button btn-secondary btn-card-secondary">Detail</a>
+              </div>
+            </div>
+
+            <div class="explore__card">
+              <img
+                class="explore__card-img"
+                src="assets/images/favorites3.png"
+              />
+              <p class="explore__card-name">Orga Tent</p>
+              <div class="explore__card-item-profile">
+                <img
+                  class="explore__card-item-profile-photo"
+                  src="assets/images/author.jpg"
+                />
+                <span class="explore__card-item-profile-author"
+                  >Dand Shawl</span
+                >
+              </div>
+              <div class="explore__card-btn-wrapper">
+                <a class="button btn-main btn-card-main">Place a bid</a>
+                <a class="button btn-secondary btn-card-secondary">Detail</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Explore Section End -->
+
+      <!-- get more section start -->
+      <section class="getmore section">
+        <div class="getmore__container container">
+          <div class="getmore__left">
+            <h1 class="getmore__title">
+              Get More Beautifull <span>Artwork </span>Here
+            </h1>
+            <p class="getmore__desc">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking
+            </p>
+            <a href="#" class="button btn-main btn-hero1">Explore All</a>
+            <a href="#" class="button btn-secondary">Create</a>
+          </div>
+          <div class="getmore__right">
+            <img class="getmore__img" src="assets/images/getmore.png" />
+          </div>
+        </div>
+      </section>
+      <!-- Get More section End -->
     </main>
 
     <!-- Footer Start -->
