--- a/index.html
+++ b/index.html
@@ -363,10 +363,124 @@
         </div>
       </section>
       <!-- Get More section End -->
+
+      <!-- Top creator section start -->
+      <section class="topcreator section">
+        <div class="topcreator__container container">
+          <h2 class="section__title topcreator__title">
+            Top Creator of the Week
+          </h2>
+          <div class="topcreator__cards">
+            <div class="topcreator__card">
+              <img
+                class="topcreator__card-img"
+                src="assets/images/author.jpg"
+              />
+              <div class="topcreator__card-details">
+                <span class="topcreator__card-name">Super Mario</span>
+                <span class="topcreator__card-wallet">
+                  <i class="bx bx-wallet"></i> 234521
+                </span>
+              </div>
+            </div>
+
+            <div class="topcreator__card">
+              <img
+                class="topcreator__card-img"
+                src="assets/images/author.jpg"
+              />
+              <div class="topcreator__card-details">
+                <span class="topcreator__card-name">Super Mario</span>
+                <span class="topcreator__card-wallet">
+                  <i class="bx bx-wallet"></i> 234521
+                </span>
+              </div>
+            </div>
+
+            <div class="topcreator__card">
+              <img
+                class="topcreator__card-img"
+                src="assets/images/author.jpg"
+              />
+              <div class="topcreator__card-details">
+                <span class="topcreator__card-name">Super Mario</span>
+                <span class="topcreator__card-wallet">
+                  <i class="bx bx-wallet"></i> 234521
+                </span>
+              </div>
+            </div>
+
+            <div class="topcreator__card">
+              <img
+                class="topcreator__card-img"
+                src="assets/images/author.jpg"
+              />
+              <div class="topcreator__card-details">
+                <span class="topcreator__card-name">Super Mario</span>
+                <span class="topcreator__card-wallet">
+                  <i class="bx bx-wallet"></i> 234521
+                </span>
+              </div>
+            </div>
+
+            <div class="topcreator__card">
+              <img
+                class="topcreator__card-img"
+                src="assets/images/author.jpg"
+              />
+              <div class="topcreator__card-details">
+                <span class="topcreator__card-name">Super Mario</span>
+                <span class="topcreator__card-wallet">
+                  <i class="bx bx-wallet"></i> 234521
+                </span>
+              </div>
+            </div>
+
+            <div class="topcreator__card">
+              <img
+                class="topcreator__card-img"
+                src="assets/images/author.jpg"
+              />
+              <div class="topcreator__card-details">
+                <span class="topcreator__card-name">Super Mario</span>
+                <span class="topcreator__card-wallet">
+                  <i class="bx bx-wallet"></i> 234521
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Top Creator section end -->
+
+      <!-- Join Section Start -->
+      <section class="join section">
+        <div class="join__container container">
+          <h2 class="section__title join__title">Join Our Community</h2>
+          <p class="join__desc">
+            Join with community around the world, lets start now
+          </p>
+          <a class="button btn-main">Join Now</a>
+        </div>
+      </section>
+      <!-- Join Section End -->
     </main>
 
     <!-- Footer Start -->
-    <footer class="footer section"></footer>
+    <footer class="footer section">
+      <div class="footer__container container">
+        <div class="footer1">
+          <h1 class="footer__logo">NFT</h1>
+          <p class="footer__desc">
+            We believe your NFT is awesome.<br />Lets show and impress the world
+          </p>
+          <div class="footer__form"></div>
+        </div>
+        <div class="footer2"></div>
+        <div class="footer3"></div>
+        <div class="footer4"></div>
+      </div>
+    </footer>
     <!-- Footer End -->
 
     <!-- Main JS -->
