--- a/index.html
+++ b/index.html
@@ -469,16 +469,92 @@
     <!-- Footer Start -->
     <footer class="footer section">
       <div class="footer__container container">
-        <div class="footer1">
-          <h1 class="footer__logo">NFT</h1>
-          <p class="footer__desc">
-            We believe your NFT is awesome.<br />Lets show and impress the world
-          </p>
-          <div class="footer__form"></div>
+        <div class="footer-up">
+          <div class="footer1">
+            <h1 class="footer__logo">NFT</h1>
+            <p class="footer__desc">
+              We believe your NFT is awesome.<br />Lets show and impress the world
+            </p>
+            <div class="footer__form"></div>
+          </div>
+          <div class="footer2">
+            <h2 class="footer__title">Marketplace</h2>
+            <ul class="footer__link-head">
+              <li class="footer__link-item">
+                <a class="footer__link">Explore</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">All NFT</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">Collection</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">Author Profile</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">Create Collection</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer3">
+            <h2 class="footer__title">Company</h2>
+            <ul class="footer__link-head">
+              <li class="footer__link-item">
+                <a class="footer__link">About Us</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">Careers</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">Contact Us</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">Support</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">Activity</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer4">
+            <h2 class="footer__title">Resources</h2>
+            <ul class="footer__link-head">
+              <li class="footer__link-item">
+                <a class="footer__link">Help Center</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">Partner</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">Item Details</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">Live Auctions</a>
+              </li>
+  
+              <li class="footer__link-item">
+                <a class="footer__link">Blog</a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="footer2"></div>
-        <div class="footer3"></div>
-        <div class="footer4"></div>
+
+        <div class="subfooter">
+          <hr class="footer__line">
+          <span class="footer__down-desc">@2023 NFT All rights Reserved</span>
+        </div>
       </div>
     </footer>
     <!-- Footer End -->
